Fix MDEV-12631 valgrind warning for zipped tables   modified:   storage/connect/filamzip.cpp